--- a/index.html
+++ b/index.html
@@ -2,55 +2,36 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
-
 		<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 		<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<title>Victoria Kennefick Poetry</title>
-		<script>
-		document.documentElement.className = 'js';
-		</script>
 	</head>
 	<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-		<nav class="navbar navbar-default navbar-fixed-top fade-one">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="#">Victoria Kennefick </a>
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myCollapsingList">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				</button>
-			</div>
-			<ul id="myCollapsingList" class="nav nav-justified collapse navbar-collapse">
-				<li class="active btn--trigger"><a href="#" >Home</a></li>
-				<li ><a href="#about" class="navLink" >About</a></li>
-				<li ><a href="#poetry" class="navLink">Poetry</a></li>
-				<li ><a href="#interviews" class="navLink">Interviews</a></li>
-				<li ><a href="#multimedia" class="navLink">Multimedia</a></li>
-				<li ><a href="#contact" class="navLink">Contact</a></li>
-				<li class="nav-item ">
-						<a class="nav-link" href="https://twitter.com/account" target="_blank" onclick="ga('send', 'event', 'link', 'click', 'Twitter Social Clicks');">
-						<i class="fa fa-circle fa-stack-2x"></i>
-							<i class="fa fa-twitter  fa-stack-1x fa-inverse"></i>
-						</a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="https://www.facebook.com/account?ref=hl" target="_blank" onclick="ga('send', 'event', 'link', 'click', 'Facebook Social Clicks');">
-						<i class="fa fa-circle fa-stack-2x"></i>
-						<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-					</a>
-				</li>
-    		</ul>
+		<nav class="navbar navbar-default navbar-fixed-top fade-one" role="navigation">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="#page-top">Victoria Kennefick </a>
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myCollapsingList">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					</button>
+				</div>
+				<ul id="myCollapsingList" class="nav nav-justified collapse navbar-collapse">
+					<li ><a href="#page-top" class="navLink" data-toggle="collapse" data-target=".navbar-collapse.in">Home</a></li>
+					<li ><a href="#about" class="navLink" data-toggle="collapse" data-target=".navbar-collapse.in" >About</a></li>
+					<li ><a href="#poetry" class="navLink" data-toggle="collapse" data-target=".navbar-collapse.in" >Poetry</a></li>
+					<li ><a href="#interviews" class="navLink" data-toggle="collapse" data-target=".navbar-collapse.in">Interviews</a></li>
+					<li ><a href="#multimedia" class="navLink" data-toggle="collapse" data-target=".navbar-collapse.in">Multimedia</a></li>
+					<li ><a href="#contact" class="navLink" data-toggle="collapse" data-target=".navbar-collapse.in">Contact</a></li>
+				</ul>
 		</nav>
-		<!-- <div class="coverImg">	 -->
-		<div class="jumbotron noBottomMargin segmenter">
+		<div class="jumbotron noBottomMargin">
 			<div class="container">
 				<div class="jumboBox">
 					<div class="row">
@@ -66,10 +47,12 @@
 								<a href="https://twitter.com/VKennefick" target="blank"><img src="assets/img/twitter.png" width="50px" height="50px"></a>
 								<a href="https://www.facebook.com/" target="blank"><img src="assets/img/facebook.png" width="45px" height="45px"></a>
 								<div class="award">
-									<h4>"Saboteur Award for Best Poetry Pamphlet </h4><h4>for White Whale (Southword Editions, 2015)."</h4>
+									<h3>"Saboteur Award for Best Poetry Pamphlet </h3><h3>for White Whale (Southword Editions, 2015)."</h3>
+									<hr>
 								</div>
+
 								<form class="form">
-									<h5><b>Please subscribe to receive poetry and updates</b></h5>
+									<h3><b>Please subscribe to receive poetry and updates</b></h3>
 									<input type="email" id="email" placeholder="Enter your email address">
 									<button class="btn btn-default" type="submit">Subscribe</button>
 								</form>
@@ -80,33 +63,35 @@
 			</div>
 		</div>
 		<!-- </div> -->
-		
 		<div class="container-fluid">
 			<div class="noBottomMargin">
 				<div class="row spacerOne">
-					<div class="col-xs-3"><a href="#">Watch</a></div>
+					<div class="col-xs-3"><a href="#multimedia">Watch</a></div>
 					<div class="col-xs-1"><img src="assets/img/stripe.jpg"></div>
-					<div class="col-xs-3"><a href="#">Read</a></div>
+					<div class="col-xs-3"><a href="#poetry">Read</a></div>
 					<div class="col-xs-1"><img src="assets/img/stripe.jpg"></div>
-					<div class="col-xs-3"><a href="#">Listen</a></div>
+					<div class="col-xs-3"><a href="#multimedia">Listen</a></div>
 				</div>
 			</div>
 			<div class="row quote" id="about">
 				<div class="col-xs-10 col-xs-offset-1">
 					<div class="bigQuote">
 						<h1>"A cat purrs against the glass outside, the window full of it,"</h1>
+						<hr>
 					</div>
 				</div>
 			</div>
-			
 			<section>
-				<div class="row about about-section">
-					<div class="aboutImgWrapper col-xs-12 col-xs-offset-1 col-md-4">
-						<img src="assets/img/headshot-vk1.jpg" alt="Victoria Kenenfick">
+				<div class="row about">
+					<div class="col-xs-12 col-xs-offset-1 col-md-4">
+						<div class="aboutImgWrapper">
+							<img src="assets/img/headshot-vk1.jpg" alt="Victoria Kenenfick">
+						</div>
 					</div>
 					<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
 						<div class="aboutText">
 							<h1>About</h1>
+							<hr>
 							<p>Victoria Kennefick is a poet, teacher and actor. A native of Shanagarry, Co. Cork, she was a recipient of the Fulbright Scholarship in 2007 and completed her PhD in Literature in University College Cork in 2009. She has lectured on the BA and MA programmes in the School of English, UCC, Georgia College and State University and Dublin City University. Most recently, her poetry has appeared in The Stinging Fly (Winter 2012) and she has read her work as part of The Seamus Heaney Summer School 2012, Queen's University, Belfast. Victoria is a member of The Listowel Writers' Week Committee 2013.</p>
 						</div>
 					</div>
@@ -117,16 +102,16 @@
 				<div class="col-xs-10 col-xs-offset-1">
 					<div class="bigQuote">
 						<h1>"We stared at each other, rare exhibits in the Louvre"</h1>
+						<hr>
 					</div>
 				</div>
 			</div>
-			<hr>
-			<main >
-			
+			<main>
 			<section >
 				<div class="container">
 					<div class="row">
 						<h1>Poetry</h1>
+						<hr>
 						<!-- Book Cover Tilter - Paris Syndrome -->
 							<div class="col-sm-4 col-sm-offset-0 col-xs-4 col-xs-offset-4">
 								<a data-toggle="modal" data-target="#parisSyndrome" class="tilter tilter--5">
@@ -497,21 +482,21 @@
 		</div>
 	</div>
 </div>
-<hr>
 </section>
 <div class="row quote">
 <div class="col-xs-10 col-xs-offset-1">
 	<div class="bigQuote" id="interviews">
 		<h2>"In small gaps I think I see where sea turns into air."</h2>
+		<hr>
 	</div>
 </div>
 </div>
-<hr>
 <a name="interviews"></a>
 <section class="interviews">
 <div class="container ">
 	<div class="row ">
 		<h1>Interviews</h1>
+		<hr>
 		<div class="col-xs-8 col-xs-offset-2 col-sm-3 col-sm-offset-0">
 			<div class="interview">
 				<a class="thumbnail">
@@ -566,21 +551,20 @@
 		</div>
 	</div>
 </section>
-<hr>
 </main>
 <div class="row quote" id="multimedia">
 	<div class="col-xs-10 col-xs-offset-1">
 		<div class="bigQuote">
 			<h2>"Winner of the Fool for Poetry Chapbook prize (2014)"</h2>
+			<hr>
 		</div>
-		
 	</div>
 </div>
-<hr>
 <section class="multimedia">
 	<div class="container">
 		<div class="row">
 			<h1>Multimedia</h1>
+			<hr>
 			<div class="col-xs-12 col-sm-6">
 				<div class="audio">
 					<h2>Audio / Podcast</h2>
@@ -591,31 +575,30 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6">
-				<div class="video">
+				<div class="video" id="videoWrapper">
 					<h2>Video</h2>
-					<p>Best poetry Pamphlet Acceptance Speech - Saboyuer Awards 2015</p>
-					<video controls="controls">
-						<source src="https://www.youtube.com/embed/CkkgwBsGkTI" type="video/mp4">
+					<p>Best poetry Pamphlet Acceptance Speech - Sabotuer Awards 2015</p>
+					<video controls="controls" preload="metadata" width="300px">
+						<source src="assets\video\Poetry Ireland Introductions Series 2013 - Series 2.mp4#t=149" type="video/mp4">
 					</video>
 				</div>
 			</div>
 		</div>
 	</div>
-	<hr>
 </section>
 <div class="row quote" id="contact">
 	<div class="col-xs-10 col-xs-offset-1">
 		<div class="bigQuote">
 			<h2>"Winner of the Fool for Poetry Chapbook prize (2014)"</h2>
+			<hr>
 		</div>
-		
 	</div>
 </div>
-<hr>
 <section class="contact">
 	<div class="container">
 		<div class="row">
 			<h1>Contact me</h1>
+			<hr>
 			<div class="col-xs-12 col-sm-6">
 				<div class="contactFormWrapper">
 					<form class="form" id="form1">
@@ -647,8 +630,7 @@
 	<hr>
 	<div class="row">
 		<div class="col-xs-10 col-xs-offset-1">
-			<h5>Footer</h5>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum blanditiis provident repudiandae ea ducimus vitae quaerat illum nobis, architecto quia, quos atque ad dignissimos nesciunt sed adipisci dolore fugit nihil!</p>
+			<p>Copyright 2017 © Daniel Design. All Rights Reserved.</p>
 		</div>
 	</div>
 </footer>
@@ -658,7 +640,6 @@
 <script src="js/anime.min.js"></script>
 <script src="js/imagesloaded.pkgd.min.js"></script>
 <script src="js/main.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="js/myScript.js"></script>
 </body>
 </html>
