--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Victoria Kennefick - poetry portfolio website">
+		<meta name="author" content="Daniel Halliday">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
